core-bundle/contao/themes/flexible/styles/components/picker.pcss
/* Picker */
.selector_container {
    margin-top: 3px;
    position: relative;
}

.selector_container > ul {
    margin: 0 0 3px;
    padding: 0;
    list-style-type: none;
}

.selector_container > ul:empty {
    margin: 0;
}

.selector_container > ul > li {
    margin: 0 9px 0 0;
    padding: 1px 0;
    line-height: 18px;
}

.selector_container {
    /* Only apply Flex if there is a type image (see #10043) */
    li:has(.type-image) {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        gap: 3px;
    }
}

.selector_container p {
    margin-bottom: 3px;
}

.selector_container img {
    max-width: 320px;
    height: auto;
}

.selector_container .limit_height {
    height: auto !important;
    max-height: 190px;
}

.selector_container .limit_toggler {
    display: none;
}

.selector_container h1,
.selector_container h2,
.selector_container h3,
.selector_container h4 {
    margin: 0;
    padding: 0;
}

.selector_container pre {
    white-space: pre-wrap;
}

.selector_container table.showColumns {
    margin: 2px 0 3px;
}

.selector_container table.sortable td {
    cursor: move;
}

